src/sidebar.css
body {
	background-color: #323232;
	color: #f9f9f9;
	overflow-x: hidden;
}
.tab {
	width: 100%;
	height: 26px;
	clear: both;
}

.tab:hover {
	background-color: #484848;
}

.badge {
	-moz-context-properties: fill;
	fill: #f9f9f9;
	width: 16px;
	height: 16px;
	top: 50%;
	transform: translateY(-50%);
	position: relative;
	margin: 0 4px;
	border-radius: 4px;
	display:inline-block;
	color: #f9f9f9;
	font-style: normal;
	pointer-events:none;
}

.badge.fold {
	width: auto;
	padding: 0px 4px;
}

.context {
	width: 2px;
	height: 100%;
	float:left;
	margin: 0 -2px 0 0;
}

.fold {
	float:left;
	background-color: grey;
}

.mute {
	float:right;
	background-color: red;
	width: 14px;
	height: 14px;
	border-radius: 7px;
	border: 1px solid black;
}

.favicon {
	-moz-context-properties: fill;
	fill: #f9f9f9;
	width: 16px;
	height: 16px;
	float:left;
	top: 50%;
	transform: translateY(-50%);
	position: relative;
	margin: 0 5px;
	display: inline-block;
	background-size: contain;
	pointer-events:none;
}

@keyframes throbber {
	from {object-position: 0px 0px;}
	to {object-position: calc(-960px * calc(16/16)) 0px;}
}

.throbber {
	object-fit: none;
	animation: throbber 1s steps(60) infinite;
}

.discarded {
	color:grey;
	font-style: italic;
}	

.active {
	background-color: #0a84ff;
	color:white;
}

.tabTitle {
	/*overflow: hidden;*/
	white-space: nowrap;
	line-height: 26px;
	width: 0px;
	display:inline-block;
}

.selection {
	background-color: #304FFE;
}

.childContainer {
	padding-left: 15px;
}


.pinned {
	width: 26px;
	float: left;
	clear: none;
}

.pinned > .badge {
	width: 12px;
	height: 12px;
	border-radius: 6px;
	position: initial;
}

.pinned > .tabTitle {
	display: none;
}

.hidden {
	display: none;
}

#selection-box {
	display: none;
	pointer-events: none;
	position: absolute;
	will-change: transform;
	background-color: #304FFE88;
	border: 1px solid #3D5AFE;
}

.dragIndicator {
	height: 2px;
	width: 100%;
	border: white 1px solid;
	position: absolute;
	will-change: left, top, transform;
	pointer-events: none;
}

